# NLCE_Cluster_Generation

./: .gitignore  Cargo.toml  LICENSE  NLCE-Rust  README.md  flake.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-5-link  flake-profile-6-link  flake-profile-7-link
NLCE_Data/: graph_bond_square_1.json  graph_bond_square_10.json  graph_bond_square_11.json  graph_bond_square_12.json  graph_bond_square_13.json  graph_bond_square_14.json  graph_bond_square_4.json  graph_bond_square_5.json  graph_bond_square_6.json  graph_bond_square_7.json  graph_bond_square_8.json  graph_bond_square_9.json  graph_mult_square_10.json  graph_mult_square_11.json  graph_mult_square_12.json  graph_mult_square_13.json  graph_mult_square_14.json  graph_mult_square_4.json  graph_mult_square_5.json  graph_mult_square_6.json  graph_mult_square_7.json  graph_mult_square_8.json  graph_mult_square_9.json  subgraph_mult_square_1.json  subgraph_mult_square_10.json  subgraph_mult_square_11.json  subgraph_mult_square_3.json  subgraph_mult_square_4.json  subgraph_mult_square_5.json  subgraph_mult_square_6.json  subgraph_mult_square_7.json  subgraph_mult_square_8.json  subgraph_mult_square_9.json
Python_NLCE/Slow_NLCE/: NLCE.py  NLCE_Optimal.py  NLCE_PyNauty.py  WorkingNLCE_Coordinates.py  WorkingNLCE_Numbers.py  WorkingNLCE_Numbers_Triangles.py
Python_NLCE/Working_NLCE/: NLCE_Final.py  NLCE_Triangles.py  NLCE_Triangles_Next.py
Python_NLCE/compare/: interpret.ipynb  temp.py
src/: main.rs
transformation_converter/: test.py
