[package]
name = "nlce_cluster_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6.2", features = ["serde-1"] }
nauty-pet = { version = "0.11.0", features = ["stable", "serde-1"] }
md-5 = "0.10.5"
itertools = "0.10.5"
blake3 = "1.3.3"
serde = "1.0.164"
serde_json = "1.0.91"

[[bin]]
edition = "2021"
name = "nlce_generation"
path = "src/main.rs"
